# frame-field-utils

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pyproject.toml  setup.py  test.py
cmake/: libigl.cmake  libigl_dc_disable_parallel_for.patch  scs.cmake  scs_uninstall_conflict_fix.patch  tbb.cmake
src-py/flow_lines/: __init__.py  trace.py
src-py/frame_field_utils/: __init__.py  utils.py
test_data/: F.npy  Q.npy  V.npy  VN.npy  miq.npz  prism.npz  prism_prac.npz
